plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.15'
	id 'io.spring.dependency-management' version '1.1.7'
}

configurations {
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}

group = 'com.easysubway'
version = '0.0.1-SNAPSHOT'
description = 'EasySubway backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	// eGovFrame 공식 Maven 저장소가 CI runner에서 간헐적으로 timeout되어 필요한 artifact만 로컬 mirror로 먼저 해석한다.
	maven {
		url = uri('gradle/local-maven')
		content {
			includeGroup 'org.egovframe.boot'
			includeGroup 'org.egovframe.rte'
		}
	}
	mavenCentral()
	maven {
		url 'https://maven.egovframe.go.kr/maven'
		content {
			includeGroup 'org.egovframe.boot'
			includeGroup 'org.egovframe.rte'
		}
	}
}

dependencyManagement {
	imports {
		mavenBom 'org.egovframe.boot:egovframe-boot-starter-parent:5.0.0'
		mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
	}
	dependencies {
		// Spring Boot BOM이 더 낮게 고정하는 공통 라이브러리는 기존 eGovFrame 기준 보안 패치 버전을 유지한다.
		// fdl-property가 끌어오는 commons-configuration2 2.11.0은 GHSA-337m-mw94-2v6g(Medium)라 2.15.0으로 상향(#1821).
		dependency 'org.apache.commons:commons-configuration2:2.15.0'
		dependency 'org.apache.commons:commons-lang3:3.18.0'
		// log4j 2.25.3은 verifyHostName 설정 속성 경로의 TLS 호스트명 검증이 누락(CVE-2026-34477, CVE-2025-68161 불완전 수정)이라 2.25.4로 상향(#1837).
		dependency 'org.apache.logging.log4j:log4j-api:2.25.4'
		dependency 'org.apache.logging.log4j:log4j-core:2.25.4'
		dependency 'org.apache.logging.log4j:log4j-jul:2.25.4'
		dependency 'org.apache.logging.log4j:log4j-slf4j2-impl:2.25.4'
		dependency 'org.apache.commons:commons-compress:1.26.2'
	}
}

dependencyLocking {
	lockAllConfigurations()
}

dependencies {
	implementation 'org.egovframe.rte:egovframe-rte-ptl-mvc'
	// 수집 배치 control-plane: bat-core 변수 리스너로 표준 배치 변수 시딩 + 생명주기 로깅(#1820).
	// psl-dataaccess는 bat-core의 inert transitive로만 존재(직접 채택 금지, contract test 강제).
	implementation 'org.egovframe.rte:egovframe-rte-bat-core'
	// 수집 run ID control-plane: fdl-idgnr Table 전략 ID + fdl-property 접두어 외부화(#1821).
	// 보안 식별자(UUID·DB PK·토큰)는 대상 아님 — 운영성 수집 run ID 한정(contract test 강제).
	implementation 'org.egovframe.rte:egovframe-rte-fdl-property'
	implementation 'org.egovframe.rte:egovframe-rte-fdl-idgnr'
	// 관리자·운영기관 내보내기 xlsx 병행(#1822): fdl-excel AbstractPOIExcelView로 렌더. CSV 계약 불변.
	// POI 계열 transitive는 mavenCentral 해석(버전 충돌 시 dependencyManagement 명시 고정).
	implementation 'org.egovframe.rte:egovframe-rte-fdl-excel'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// 관리자 콘솔 htmx 부분 응답 규약: @HxRequest 매핑 분리와 hx: dialect의 CSRF 헤더 자동 주입.
	// 4.0.x는 Spring Boot 3.5 기준으로 빌드된 계열이라 현재 BOM(3.5.15)과 정합한다(5.x는 Spring Boot 4.0 기준).
	implementation 'io.github.wimdeblauwe:htmx-spring-boot-thymeleaf:4.0.3'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.flywaydb:flyway-core'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.flywaydb:flyway-database-postgresql'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.batch:spring-batch-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.2'
	testImplementation 'org.testcontainers:junit-jupiter:1.21.4'
	testImplementation 'org.testcontainers:postgresql:1.21.4'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	// @SpringBootTest 컨텍스트 캐시 누적 + fdl-excel 1만 행 xlsx 메모리 테스트(#1822)로 스위트 힙 수요가
	// 기본 512MB를 넘어선다. 포크 테스트 JVM 힙을 2g로 상향(전체 스위트·CI 공통 OOM 방지).
	maxHeapSize = '2g'
}

tasks.named('processResources') {
	from('../tools/datapack/source-governance-policy.json') {
		into 'datapack'
	}
	from('../apps/mobile/release/datapack-freshness-sla.json') {
		into 'datapack'
	}
}
